# ZPO

prednasky/: 1 Reprezentácia obrazu.docx  10 Matematická morfológia.docx  2 Lineárna filtrácia obrazu.docx  3 Bodové transformácie obrazu.docx  4 Detekcia hrán a segmentácia obrazu.docx  5 Chyby v obraze, typy šumu, reštaurácia obrazu a optimálna filtrácia.docx  9 Resampling, Warping and Morphing.docx
projekt/src/: CMakeLists.txt
projekt/src/app/: CMakeLists.txt  main.cpp
projekt/src/app/cvfilters/: filters.h
projekt/src/app/gui/: Window.cpp  Window.h  window.ui
projekt/src/imagefilters/: CMakeLists.txt
projekt/src/imagefilters/src/imagefilters/: EdgeDetection.cpp  EdgeDetection.h  Emboss.cpp  Emboss.h  Filter.cpp  Filter.h  ImageQuantization.cpp  ImageQuantization.h  zpo.cpp  zpo.h
projekt/technicka správa/: measuring.xlsx
projektiky/uloha1/: Makefile  mt01.cpp
projektiky/uloha2/: Makefile  mt02  mt02.cpp
projektiky/uloha3/: Makefile  mt03  mt03.cpp
projektiky/uloha3/reference/: mt03
projektiky/uloha4/: Makefile  mt04  mt04.cpp
projektiky/uloha5/: Makefile  mt05  mt05.cpp
